--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,12 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-      <a class="navbar-brand display-3" href="#">{{title}}</a>
-
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
+    <a class="navbar-brand display-3" href="#">{{title}}</a>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+      <ul class="nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: grey;">
+            Hedensbyns Företagspark
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Hedensbyns Företagspark</a>
+          </div>
         </li>
       </ul>
+    </div>
   </div>
 </nav>
 <br>
