--- a/src/app/unit/unit.component.html
+++ b/src/app/unit/unit.component.html
@@ -1,3 +1,106 @@
-<p>
-  unit works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-9">
+      <div class="card">
+        <div id="carouselExampleIndicators" class="card-img-top carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img01.png" alt="First slide">
+            </div>
+            <div class="carousel-item ">
+                <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img03.png" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img04.png" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                  <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img02.png" alt="Second slide">
+                </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+      <br>
+      <div class="card">
+        <div class="card-body">
+          <h3 class="display-3">{{ unit.name }}</h3>
+        <br>
+          <h3>Byggnad</h3>
+          <hr>
+          <h5>Grund</h5>
+          <p>Betong</p>
+
+          <h5>Stomme</h5>
+          Betong
+
+          <h5>Bjälklag</h5>
+          Betong
+
+          <h5>Fasad</h5>
+          Utbytbart fasadsystem med mont
+
+          <h5>Tak</h5>
+          Plåt, bjälklag i trä
+
+          <h5>Fönstertyp</h5>
+          2 och 3 glas
+
+          <h5>Ventilation</h5>
+          frånluft, samt specifika lösningar för respektive hyresgäst.
+
+          <h5>Vatten/avlopp</h5>
+          Kommunalt vatten och avlopp
+
+          <h5>Uppvärmning</h5>
+          Bergvärme, tillsats olja
+        </div>
+      </div>
+    </div>
+    <div class="col-3">
+      <div class="card">
+        <img class="card-img-top" src="../../assets/avatar.jpg" alt="Mäklare">
+        <div class="card-body">
+          <h5 class="card-title">Ansvarig mäklare</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+      <br>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Faktaruta</h5>
+          <table class="table table-borderless table-sm">
+            <tr>
+              <th>Pris</th>
+              <td>{{ unit.price | currency:'SEK':'':'1.0-0' }} kr</td>
+            </tr>
+            <tr>
+              <th>Avgift</th>
+              <td>{{ unit.rent | currency:'SEK':'':'1.0-0' }} kr</td>
+            </tr>
+            <tr>
+              <th>Storlek</th>
+              <td>{{ unit.size | currency:'SEK':'':'1.0-0' }} kvm</td>
+            </tr>
+
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-9">
+
+    </div>
+    <div class="col-3">
+
+    </div>
+  </div>
+</div>
