--- a/src/app/unit/unit.component.html
+++ b/src/app/unit/unit.component.html
@@ -2,20 +2,21 @@
   <div class="row">
     <div class="col-9">
       <div class="card">
+
         <div id="carouselExampleIndicators" class="card-img-top carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img01.png" alt="First slide">
             </div>
             <div class="carousel-item ">
-                <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img03.png" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img04.png" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                  <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img02.png" alt="Second slide">
-                </div>
+              <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img03.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img04.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img02.png" alt="Second slide">
+            </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -26,40 +27,46 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
+
       </div>
       <br>
       <div class="card">
         <div class="card-body">
-          <h3 class="display-3">{{ unit.name }}</h3>
-        <br>
+          <h1 class="card-title">{{ unit.name }}</h1>
+          <p>Lorem Ipsum är en utfyllnadstext från tryck- och förlagsindustrin. Lorem ipsum har varit standard ända sedan 1500-talet,
+            när en okänd boksättare tog att antal bokstäver och blandade dem för att göra ett provexemplar av en bok. Lorem
+            ipsum har inte bara överlevt fem århundraden, utan även övergången till elektronisk typografi utan större förändringar.
+            Det blev allmänt känt på 1960-talet i samband med lanseringen av Letraset-ark med avsnitt av Lorem Ipsum, och
+            senare med mjukvaror som Aldus PageMaker.</p>
+          <br>
           <h3>Byggnad</h3>
           <hr>
           <h5>Grund</h5>
           <p>Betong</p>
 
           <h5>Stomme</h5>
-          Betong
+          <p>Betong</p>
 
           <h5>Bjälklag</h5>
-          Betong
+          <p>Betong</p>
 
           <h5>Fasad</h5>
-          Utbytbart fasadsystem med mont
+          <p>Plåt</p>
 
           <h5>Tak</h5>
-          Plåt, bjälklag i trä
+          <p>Plåt</p>
 
           <h5>Fönstertyp</h5>
-          2 och 3 glas
+          <p>Treglas</p>
 
           <h5>Ventilation</h5>
-          frånluft, samt specifika lösningar för respektive hyresgäst.
+          <p>Frånluft</p>
 
           <h5>Vatten/avlopp</h5>
-          Kommunalt vatten och avlopp
+          <p>Kommunalt vatten och avlopp</p>
 
           <h5>Uppvärmning</h5>
-          Bergvärme, tillsats olja
+          <p>Bergvärme</p>
         </div>
       </div>
     </div>
