--- a/src/app/unit/unit.component.html
+++ b/src/app/unit/unit.component.html
@@ -41,22 +41,26 @@
           <br>
           <h3>Byggnad</h3>
           <hr>
-          <h5>Grund</h5>
-          <p>Betong</p>
+          <div class="row">
+          <div class="col-6">
+            <h5>Grund</h5>
+            <p>Betong</p>
 
-          <h5>Stomme</h5>
-          <p>Betong</p>
+            <h5>Stomme</h5>
+            <p>Betong</p>
 
-          <h5>Bjälklag</h5>
-          <p>Betong</p>
+            <h5>Bjälklag</h5>
+            <p>Betong</p>
 
-          <h5>Fasad</h5>
-          <p>Plåt</p>
+            <h5>Fasad</h5>
+            <p>Plåt</p>
 
-          <h5>Tak</h5>
-          <p>Plåt</p>
+            <h5>Tak</h5>
+            <p>Plåt</p>
 
-          <h5>Fönstertyp</h5>
+          </div>
+          <div class="col-6">
+            <h5>Fönstertyp</h5>
           <p>Treglas</p>
 
           <h5>Ventilation</h5>
@@ -67,8 +71,16 @@
 
           <h5>Uppvärmning</h5>
           <p>Bergvärme</p>
+
+          </div>
+        </div>
         </div>
       </div>
+      <br>
+      <div class="card">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1702.582084811809!2d21.02675231660073!3d64.7415872728741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNjTCsDQ0JzI5LjciTiAyMcKwMDEnNDQuMiJF!5e0!3m2!1ssv!2sse!4v1527750055465" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <br>
     </div>
     <div class="col-3">
       <div class="card">
@@ -99,15 +111,6 @@
           </table>
         </div>
       </div>
-    </div>
-  </div>
-  <br>
-  <div class="row">
-    <div class="col-9">
-
-    </div>
-    <div class="col-3">
-
     </div>
   </div>
 </div>
