--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -10,10 +10,10 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="#">HEDENSBYNS FÖRETAGSPARK</a>
-            <a class="dropdown-item" href="#">ETT ANNAT PROJEKT</a>
             <div class="dropdown-divider"></div>
-
-            <a class="dropdown-item justify-content-end" href="#">LOGGA IN</a>
+            <a class="dropdown-item" href="#">PROJEKT TVÅ</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">PROJEKT TRE</a>
           </div>
         </li>
       </ul>
