--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -9,8 +9,11 @@
             HEDENSBYNS FÖRETAGSPARK
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">HEDENSBYNS FÖRETAGSPARK</a>
-            <div class="dropdown-divider"></div>
+            <span>
+                <a class="dropdown-item" href="#">BLA</a>
+                <div class="dropdown-divider"></div>
+            </span>
+            
             <a class="dropdown-item" href="#">PROJEKT TVÅ</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">PROJEKT TRE</a>
