--- a/src/app/unit/unit.component.html
+++ b/src/app/unit/unit.component.html
@@ -1,3 +1,9 @@
+<nav class="navbar navbar-expand-lg">
+  <div class="container">
+    <a class="navbar-brand display-3" href="#">INDUSTRIRADHUS.SE</a>
+  </div>
+</nav>
+<br>
 <div class="container">
   <div class="row">
     <div class="col-9">
@@ -5,17 +11,8 @@
 
         <div id="carouselExampleIndicators" class="card-img-top carousel slide" data-ride="carousel">
           <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img01.png" alt="First slide">
-            </div>
-            <div class="carousel-item ">
-              <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img03.png" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img04.png" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="../../assets/unit-hedensbyn01-img02.png" alt="Second slide">
+            <div *ngFor='let picture of unit.pictures; let i=index;' class="carousel-item" [ngClass]="{'active': i == 0}">
+              <img class="d-block w-100" src="{{'../assets/' + picture.fileName}}" alt="">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -32,62 +29,46 @@
       <br>
       <div class="card">
         <div class="card-body">
-          <h1 class="card-title">{{ unit.name }}</h1>
-          <p>Lorem Ipsum är en utfyllnadstext från tryck- och förlagsindustrin. Lorem ipsum har varit standard ända sedan 1500-talet,
-            när en okänd boksättare tog att antal bokstäver och blandade dem för att göra ett provexemplar av en bok. Lorem
-            ipsum har inte bara överlevt fem århundraden, utan även övergången till elektronisk typografi utan större förändringar.
-            Det blev allmänt känt på 1960-talet i samband med lanseringen av Letraset-ark med avsnitt av Lorem Ipsum, och
-            senare med mjukvaror som Aldus PageMaker.</p>
-          <br>
-          <h3>Byggnad</h3>
-          <hr>
-          <div class="row">
-          <div class="col-6">
-            <h5>Grund</h5>
-            <p>Betong</p>
+          <h1 class="card-title">{{ unit.mainDescription.heading }}</h1>
+          <p>{{ unit.mainDescription.text }}</p>
 
-            <h5>Stomme</h5>
-            <p>Betong</p>
-
-            <h5>Bjälklag</h5>
-            <p>Betong</p>
-
-            <h5>Fasad</h5>
-            <p>Plåt</p>
-
-            <h5>Tak</h5>
-            <p>Plåt</p>
-
+          <div *ngFor='let description of unit.descriptions'>
+            <br>
+            <h5>{{ description.heading}}</h5>
+            <p class="card-text">{{ description.text }}</p>
           </div>
-          <div class="col-6">
-            <h5>Fönstertyp</h5>
-          <p>Treglas</p>
 
-          <h5>Ventilation</h5>
-          <p>Frånluft</p>
-
-          <h5>Vatten/avlopp</h5>
-          <p>Kommunalt vatten och avlopp</p>
-
-          <h5>Uppvärmning</h5>
-          <p>Bergvärme</p>
-
+          <div *ngFor='let characteristicsSection of unit.characteristicsSections'>
+            <br>
+            <h3>{{characteristicsSection.heading}}</h3>
+            <hr>
+            <div class="row">
+            <div class="col-4" *ngFor='let characteristic of characteristicsSection.characteristics'>
+              <h5>{{ characteristic.description }}</h5>
+              <p>{{ characteristic.text }}</p>
+            </div>
           </div>
-        </div>
+          </div>
         </div>
       </div>
       <br>
       <div class="card">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1702.582084811809!2d21.02675231660073!3d64.7415872728741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNjTCsDQ0JzI5LjciTiAyMcKwMDEnNDQuMiJF!5e0!3m2!1ssv!2sse!4v1527750055465" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1702.582084811809!2d21.02675231660073!3d64.7415872728741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNjTCsDQ0JzI5LjciTiAyMcKwMDEnNDQuMiJF!5e0!3m2!1ssv!2sse!4v1527750055465"
+          height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          
       </div>
       <br>
     </div>
     <div class="col-3">
       <div class="card">
-        <img class="card-img-top" src="../../assets/avatar.jpg" alt="Mäklare">
+        <h5 class="card-body">Ansvarig mäklare</h5>
+        <img class="card-img-top" src="{{ '../assets/' + unit.salesAgent.picture.fileName }}" alt="Mäklare">
+        
         <div class="card-body">
-          <h5 class="card-title">Ansvarig mäklare</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          
+          <p class="card-text"><b>{{ unit.salesAgent.name }}</b></p>
+          <p class="card-text">{{ unit.salesAgent.phone }}</p>
+          <p class="card-text"><a href="{{ 'mailto:' + unit.salesAgent.email }}">{{ unit.salesAgent.email | truncate}}</a></p>
         </div>
       </div>
       <br>
