--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,13 @@
 body{
     background-color: rgb(250, 250, 250);
 }
+.navbar{
+    background-color: white;
+    border: solid;
+    border-width: 1px;
+    border-color: gainsboro;
+}
+
+a, a:hover{
+    color: rgb(100, 100, 100);
+}
