--- a/src/styles.css
+++ b/src/styles.css
@@ -3,12 +3,49 @@ body{
     background-color: rgb(250, 250, 250);
 }
 .navbar{
-    background-color: white;
-    border: solid;
-    border-width: 1px;
-    border-color: gainsboro;
+    background: none;
+    z-index: 100;
+}
+
+.navbar-brand{
+    font-family: Consolas,monaco,monospace;
+    color: rgb(100, 100, 100);
+}
+
+.footer-heading{
+    font-family: Consolas,monaco,monospace;
+    font-size: 1.8rem;
+}
+
+.footer-links{
+    font-family: Consolas,monaco,monospace;
 }
 
 a, a:hover{
     color: rgb(100, 100, 100);
+}
+
+.landing {
+    margin-top: -60px;
+    margin-bottom: -150px;
+}
+
+.landing img {
+    width:100%;
+    height: 100%;
+}
+
+.carousel-indicators li {
+    background-color: gray;
+}
+.carousel-indicators .active {
+    background-color: rgb(0, 0, 0);
+}
+
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='rgb(0, 0, 0)' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='rgb(0, 0, 0)' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
 }
