--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,4 @@
+/*
 .navbar {
     background-color: white;
     border-bottom-left-radius: .25rem;
@@ -6,6 +7,7 @@
     border-top: none;
     margin-top: 0px;
 }
+*/
 
 .photo {
     border-radius: 50%;
