--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,10 +1,11 @@
-<nav class="navbar navbar-expand-lg">
+
   <div class="container">
-    <span class="navbar-brand">
-      <img src="../../assets/img/header-logo.png" width="160px" (click)="navigateHome()" style="cursor: pointer;">
-    </span>
- 
-      <div class="dropdown pull-right" *ngIf="authProvider.isAuthenticated()">
+    <div class="row mt-2 mb-3">
+      <div class="col">
+        <img src="../../assets/img/header-logo.png" width="200px" (click)="navigateHome()" style="cursor: pointer;">
+      </div>
+      <div class="col text-right pr-0">
+        <div class="dropdown mt-2" *ngIf="!isAnonymous">
           <button class="btn btn-outline-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <img class="photo" [src]="getPhotoUrl()" />
             {{ getName() }}
@@ -13,6 +14,6 @@
             <a class="dropdown-item" href="#" (click)="signOut()">Logga ut</a>
           </div>
         </div>
+      </div>
+    </div>
   </div>
-</nav>
-<br>
